       on a network share. (Stefan)
- ADD: Warn the user if (s)he tries to checkout/import
       via file to a repository on a network share. (Stefan)
- CHG: Many cosmetic changes to the UI. (Stefan)
- CHG: The log dialog shows now the log messages
       in the fourth column (a short version) so
       you can see the logs without clicking on
       the revision. (Thomas Epting)
- BUG: If the "Check for updates" dialog is started
       for a file (not for a folder), the filename
       wasn't shown. (Stefan)
- BUG: Fix various bugs with svn:externals and the
       commit/add dialogs. (Stefan)
- BUG: Various bugfixes for TortoiseMerge. (Stefan)

Version 1.0
- ADD: New option in the settings dialog to set the 
       filetimes to the last commit time. This solves
       issue 83. (Stefan)
- ADD: From the log dialog it's now possible to start
       the repository browser so it browses the
       selected revision. (Stefan)
- ADD: New button in the settings dialog to open
       the subversion config file with the default
       text editor. (Stefan)
- ADD: Implement Issue 87. TortoiseMerge shows now
       the filename and the revision in the viewtitle.
       TME gets this information from TSVN. (Stefan)
- ADD: The repository browser now allows the selection
       of more than one item. With this, the user can
       now select two files/folders from different
       urls (e.g. trunk and tags) and request a diff
       from them. (Stefan)
- ADD: Implement a "Delete" command in the context menu of 
       the commit dialog for unversioned files. (Stefan)
- ADD: TortoiseMerge can now handle UTF8 files. (Stefan)
- ADD: Selecting of lines and copying them to the
       clipboard in TortoiseMerge. (Stefan)
- CHG: Use of an iterator to gather all the files
       needed for import/commit/add. This saves a lot
       of memory and is also a big speedup for large
       directories. (Jon Foster)
- CHG: The log message editboxes now do "soft-wrap",