@@ -19,6 +19,8 @@
        in the fourth column (a short version) so
        you can see the logs without clicking on
        the revision. (Thomas Epting)
+- CHG: The font combobox now only shows each font
+       once. (Stefan)
 - BUG: If the "Check for updates" dialog is started
        for a file (not for a folder), the filename
        wasn't shown. (Stefan)
